Fix member destruction order for memory_instrumentation::CoordinatorImpl.

The bindings must be destroyed before extant callbacks.

Bug: 767128
Change-Id: I5670829ec677f929a6fed74761f319a1c4486035
Reviewed-on: https://chromium-review.googlesource.com/675985
Commit-Queue: Primiano Tucci <primiano@chromium.org>
Reviewed-by: Primiano Tucci <primiano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503371}
Former-commit-id: 6995ce043e1835be5d5fb7785112d8f1ff1fe423